--- a/.travis.yml
+++ b/.travis.yml
@@ -41,9 +41,11 @@ matrix:
 
 install:
   - brew update
-  - brew install cmake
   - brew tap homebrew/science
-  - brew install opencv3 --with-python
+  - brew install opencv3 --with-python --with-python3
+  - brew link --force opencv3
+  # - echo /usr/local/opt/opencv3/lib/python2.7/site-packages >> /usr/local/lib/python2.7/site-packages/opencv3.pth
+  # - echo /usr/local/opt/opencv3/lib/python3.6/site-packages >> /usr/local/lib/python3.6/site-packages/opencv3.pth
   - brew install boost-python
   - mkdir -p native/build && cd native/build
   - cmake ..
@@ -55,7 +57,6 @@ install:
     -DPYTHON2_NUMPY_INCLUDE_DIRS=/usr/local/Cellar/numpy/1.12.0/lib/python2.7/site-packages/numpy/core/include/ 
     -DBOOST_ROOT=/usr/local/Cellar/boost/1.63.0/ 
     -DBoost_INCLUDE_DIR=/usr/local/Cellar/boost/1.63.0/include/
-  - brew link --force opencv3
   - make
   - make install
   - ./.travis/install.sh
