Remove the --with-python unknown option for opencv3

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ cache:
 install:
   - brew update
   - brew tap homebrew/science
-  - brew install opencv3 --with-python
+  - brew install opencv3
   - brew link --force opencv3
   - echo /usr/local/opt/opencv3/lib/python2.7/site-packages >> /usr/local/lib/python2.7/site-packages/opencv3.pth
   # - echo /usr/local/opt/opencv3/lib/python3.6/site-packages >> /usr/local/lib/python3.6/site-packages/opencv3.pth
