--- a/native/CMakeLists.txt
+++ b/native/CMakeLists.txt
@@ -50,7 +50,7 @@ if (${PYTHON_DESIRED_VERSION} STREQUAL "2.X")
     find_package(Boost COMPONENTS python REQUIRED)
 else ()
     set(Python_ADDITIONAL_VERSIONS ${PYTHON3_VERSION_MAJOR}.${PYTHON3_VERSION_MINOR})
-    find_package(Boost COMPONENTS python-py${PYTHON3_VERSION_MAJOR}${PYTHON3_VERSION_MINOR} REQUIRED)
+    find_package(Boost COMPONENTS python${PYTHON3_VERSION_MAJOR}${PYTHON3_VERSION_MINOR} REQUIRED)
 endif ()
 
 
